Closed Bug 781086 Opened 12 years ago Closed 12 years ago

horizontal scrollbar appears when not expected

Categories

(Core :: Layout, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla17
Tracking Status
firefox17 + verified

People

(Reporter: tnikkel, Assigned: tnikkel)

References

Details

Attachments

(2 files)

Attached file testcase
Open the testcase, see horizontal scrollbar. We didn't use to have one. Might be Linux only. The first bad revision is: changeset: 101294:b5e444664a6c user: Markus Stange <mstange@themasta.com> date: Fri Aug 03 12:35:14 2012 +0200 summary: Bug 770453 - [b2g] Semi-transparent scroll bars should not occupy content-flow space. r=roc
Attached patch patchSplinter Review
Looks like the argument was in the wrong spot accidentally, meaning we got the min size where it was intended for us to retrieve the pref size.
Assignee: nobody → tnikkel
Attachment #651535 - Flags: review?(roc)
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
Keywords: verifyme
Mozilla/5.0 (X11; Linux i686; rv:17.0) Gecko/17.0 Firefox/17.0 Verified with Ubuntu Unity and XFCE (with the help of lcamacho). Firefox 17 beta1
Keywords: verifyme
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: