Bug 781086. Accidentally misplaced argument meant we were getting the min size instead of the pref size causing scroll bars to appear where they shouldn't. r=roc